--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(255,255,255,0.4) 0%, rgba(0,36,61,0.4) 50%), url('<%= image_path "community-diversity-feet.jpg" %>');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(255,255,255,0.4) 0%, rgba(0,36,61,0.4) 50%), url('<%= image_path "Picture for One of the main back image.jpg" %>');">
   <div class="banner-content">
     <h1>About the HeroesToo Foundation</h1>
   </div>
