--- a/app/views/pages/wwd.html.erb
+++ b/app/views/pages/wwd.html.erb
@@ -5,7 +5,7 @@
       <div class="card-two">
         <div class="card-two-contents">
           <div class="card-two-image">
-            <%= image_tag "ecopledge-new.png" %>
+            <%= image_tag "heroestoo ecopledge education program.jpg" %>
           </div>
           <div class="card-two-title">
             <span><h3>HeroesToo EcoPledge Education Program</h3></span>
@@ -23,7 +23,7 @@
       <div class="card-two">
         <div class="card-two-contents">
             <div class="card-two-image">
-              <%= image_tag "ecopledge-logo-cropped-02.png" %>
+              <%= image_tag "Picture For Ecopledge Workshop.jpg" %>
             </div>
             <div class="card-two-title">
               <span><h3>HeroesToo EcoPledge</h3></span>
@@ -59,7 +59,7 @@
       <div class="card-two">
         <div class="card-two-contents">
           <div class="card-two-image">
-            <%= image_tag "sustainable-design-comp.png" %>
+            <%= image_tag "Pic for Other programs.jpg" %>
           </div>
           <div class="card-two-title">
             <span><h3>Other Programmes</h3></span>
@@ -99,7 +99,7 @@
 
   document.querySelector("#ht-ecopledge-program").addEventListener("mouseup", function() {
     let programExplanation = document.querySelector(".program-info")
-    programExplanation.innerHTML = "<br><h3 style='text-align: center;'>HeroesToo EcoPledge</h3><p>The HeroesToo EcoPledge is a personal, measurable commitment to reduce the use of one of the earth’s precious resources: water, energy, paper or food waste or plastic waste, thereby reducing our carbon footprint.</p><p>Through the HeroesToo EcoPledge, we engage individuals to make a commitment: a pledge to physically decrease their resource consumption, thereby reducing their carbon footprint.</p><p>By supporting and committing to our EcoPledge Program, companies take a meaningful role of Social Responsibility. Taking a corporate EcoPledge to protect the environment your company’s resource usage is reduced and your company saves money. With financial support and funding the EcoPledge Program you multiply the benefits many times over through eco-education to today’s youth, who are our future. </p><br><h3 style='text-align: center;'>The EcoPledge App</h3><p>The EcoPledge App is our unique online tool to assist the user protect the environment through awareness of their daily resource consumption. The app motivates individuals, tracks their eco-habits, rewards their efforts to reduce resource consumption and measures the carbon footprint gained/lost.</p><p>Sharing this App via social media helps spread the habit of leading a sustainable lifestyle through lowering resource usage and as more people participate a mass momentum is achieved.</p>"
+    programExplanation.innerHTML = "<div style='padding-top: 20px; width: 20%; margin: 0 auto;'><img src='https://res.cloudinary.com/dofuzeof4/image/upload/v1535128140/ecopledge-logo-01_dgi6fk.png' alt='ecopledge'></div><br><h3 style='text-align: center;'>HeroesToo EcoPledge</h3><p>The HeroesToo EcoPledge is a personal, measurable commitment to reduce the use of one of the earth’s precious resources: water, energy, paper or food waste or plastic waste, thereby reducing our carbon footprint.</p><p>Through the HeroesToo EcoPledge, we engage individuals to make a commitment: a pledge to physically decrease their resource consumption, thereby reducing their carbon footprint.</p><p>By supporting and committing to our EcoPledge Program, companies take a meaningful role of Social Responsibility. Taking a corporate EcoPledge to protect the environment your company’s resource usage is reduced and your company saves money. With financial support and funding the EcoPledge Program you multiply the benefits many times over through eco-education to today’s youth, who are our future. </p><br><h3 style='text-align: center;'>The EcoPledge App</h3><p>The EcoPledge App is our unique online tool to assist the user protect the environment through awareness of their daily resource consumption. The app motivates individuals, tracks their eco-habits, rewards their efforts to reduce resource consumption and measures the carbon footprint gained/lost.</p><p>Sharing this App via social media helps spread the habit of leading a sustainable lifestyle through lowering resource usage and as more people participate a mass momentum is achieved.</p>"
   });
 
 
