--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
       <div class="col-xs-12 col-sm-2">
         <%= image_tag "ecopledge-logo-01.png" %>
         <h4>152</h4>
-        <p>Organizations taking the EcoPledge</p>
+        <p>Carbon footprint reduction from the EcoPledge</p>
       </div>
       <div class="col-xs-12 col-sm-2">
         <%= image_tag "icons-07.png" %>
