--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,7 +2,7 @@
   <h3>There are many ways that you can support us! Get in contact and let's start a conversation.</h3>
   <div class="row about-content">
     <div class="col-xs-12 col-sm-8 about-explanation">
-      <h3 style='text-align: center;'>Contact Us</h3><br><h4>Raymond Yap CEO</h4><h4>HeroesToo</h4><h4>S606 PMQ</h4><h4>35 Aberdeen Street</h4><h4>Hong Kong</h4><h5>Telephone number: +852 64030208</h5><h5>E-mail:<a style= 'color: white;' href='mailto:info@heroestoo.com'> info@heroestoo.com</a></h5>
+      <h3 style='text-align: center;'>Contact Us</h3><br><h4>Raymond Yap CEO</h4><h4>HeroesToo</h4><h4>S606 PMQ</h4><h4>35 Aberdeen Street</h4><h4>Hong Kong</h4><br><h5>Telephone number: +852 64030208</h5><h5>E-mail:<a style= 'color: white;' href='mailto:info@heroestoo.com'> info@heroestoo.com</a></h5>
     </div>
     <div class="col-xs-12 col-sm-4 about-links">
       <ul>
