--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(255,255,255,0.4) 0%, rgba(0,36,61,0.4) 50%), url('<%= image_path "plastic-bottle.jpg" %>');">
   <div class="banner-content">
-    <h1>A Hero Today,</h1>
-    <h1>A World of Difference Tomorrow</h1>
+    <h1>A hero today,</h1>
+    <h1>a world of difference tomorrow</h1>
     <div class="call-to-action-banner">
       <p>Change your habits by taking the EcoPledge</p>
       <p><i class="fas fa-caret-down"></i></p>
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class="ecopledge-cta">
-    <h5>ARE YOU A SCHOOL, ORGANIZATION, OR INDIVIDUAL?</h5>
+    <h5>ARE YOU A SCHOOL, ORGANISATION OR INDIVIDUAL?</h5>
     <%= link_to '<button type="button" class="btn btn-primary btn-lg" style="border: 1px solid rgba(255, 255, 255, .5);">Take the EcoPledge NOW</button>'.html_safe, ecopledge_path %>
   </div>
 </div>
