--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer" id="footer-contact">
   <div class="logo-slogan">
     <%= image_tag "Heroes-Too-Logo-01.png", height: 200 %>
-    <p>A Hero Today, A World of Difference Tomorrow</p>
+    <p>A hero today, a world of difference tomorrow</p>
   </div>
   <div class="footer-links">
     <div class="abt-links">
@@ -14,7 +14,7 @@
     <div class="abt-links">
       <h5 style='padding: 0 20px !important;'>Get Involved</h5>
       <p><%= link_to "Take the EcoPledge", ecopledge_path, class: "navbar-wagon-item navbar-wagon-link" %></p>
-      <p><a><%= link_to "Our Programs", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
+      <p><a><%= link_to "Our Programmes", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <p><a><%= link_to "Volunteer", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <p><a><%= link_to "Sponsor Us", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <%= link_to '<button style="margin: 0 20px; type="button" class="btn btn-primary">Donate</button>'.html_safe, contact_us_path %>
@@ -22,7 +22,7 @@
   </div>
   <div class="map-social-icons">
     <%= image_tag "map-placeholder.jpg", height: 100 %>
-    <p><i class="fas fa-map-marker"></i> HeroesToo, S606 PMQ, 35 Aberdeen Street, Hong Kong</p>
+    <p><i class="fas fa-map-marker"></i> HeroesToo, S606 PMQ, <br> 35 Aberdeen Street, Hong Kong</p>
     <p><i class="fas fa-envelope"></i> <a href="mailto:info@heroestoo.com">info@heroestoo.com</a></p>
     <p><i class="fas fa-phone"></i> +852 64030208</p>
     <hr style="border-color: rgba(0, 0, 0, .3);">
