--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -51,7 +51,7 @@
 
   document.querySelector("#contact").addEventListener("mouseup", function() {
     let ourTeam = document.querySelector(".about-explanation")
-    ourTeam.innerHTML = "<h3 {text-align: center;}>Contact Us</h3><br><h4>HeroesToo</h4><h4>℅ S606 PMQ</h4><h4>35 Aberdeen Street</h4><h4>Hong Kong</h4><br><p>Telephone number: +852 64030208</p><p>E-mail:<a style= 'color: white;' href='mailto:info@heroestoo.com'> info@heroestoo.com</a></p>"
+    ourTeam.innerHTML = "<h3 {text-align: center;}>Contact Us</h3><br><h4>HeroesToo</h4><h4>℅ S606 PMQ</h4><h4>35 Aberdeen Street</h4><h4>Hong Kong</h4><br><p>Telephone: +852 64030208</p><p>E-mail:<a style= 'color: white;' href='mailto:info@heroestoo.com'> info@heroestoo.com</a></p>"
   });
 </script>
 
