--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,5 @@
 <div class="about-body" id="content-top">
-  <h3>There are many ways that you can support us.</h3><h3 style="padding-top: 20px;">Get in contact and let's start a conversation.</h3>
+  <h3>There are many ways you can support us.</h3><h3 style="padding-top: 20px;">Get in contact and let's start a conversation.</h3>
   <div class="row about-content">
     <div class="col-xs-12 col-sm-8 about-explanation">
       <h3 style='text-align: center;'>Contact Us</h3><br><h4>Raymond Yap CEO</h4><h4>HeroesToo</h4><h4>S606 PMQ</h4><h4>35 Aberdeen Street</h4><h4>Hong Kong</h4><br><h5>Telephone: +852 64030208</h5><h5>E-mail:<a style= 'color: white;' href='mailto:info@heroestoo.com'> info@heroestoo.com</a></h5>
@@ -34,7 +34,7 @@
 
   document.querySelector("#donations").addEventListener("mouseup", function() {
     let ourTeam = document.querySelector(".about-explanation")
-    ourTeam.innerHTML = "<h3 style='text-align: center;'>Donations</h3><br><br><h4>CHEQUE: Please make your cheque payable to “HeroesToo Foundation” and post to:</h4><p style='padding-left: 20px;'>Mr. Raymond Yap</p><p style='padding-left: 20px;'>CEO</p><p style='padding-left: 20px;'>HeroesToo Ltd.</p><p style='padding-left: 20px;'>S606 PMQ</p><p style='padding-left: 20px;'>35 Aberdeen Street Central</p><p style='padding-left: 20px;'>Hong Kong</p><p>To save paper a receipt will only be sent upon request. If you do, please provide us with a forwarding address.  As we are a registered Hong Kong charity your donation is tax-deductible.</p><br><h4>ATM TRANSFER: Please call us for banking details.</h4>"
+    ourTeam.innerHTML = "<h3 style='text-align: center;'>Donations</h3><br><br><h4>CHEQUE: Please make your cheque payable to “HeroesToo Foundation” and post to:</h4><p style='padding-left: 20px;'>Mr. Raymond Yap</p><p style='padding-left: 20px;'>CEO</p><p style='padding-left: 20px;'>HeroesToo Ltd.</p><p style='padding-left: 20px;'>S606 PMQ</p><p style='padding-left: 20px;'>35 Aberdeen Street Central</p><p style='padding-left: 20px;'>Hong Kong</p><p>To save paper a receipt will only be sent upon request. If you do, please provide us with a forwarding address.  As we are a registered Hong Kong charity your donation is tax-deductible.</p><br><h4>ATM TRANSFER: Please call +852 64030208.</h4>"
   });
 
 
