--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,29 +17,29 @@
     <div class="row">
       <div class="col-xs-12 col-sm-2 col-sm-offset-1">
         <%= image_tag "icons-09-01.png" %>
-        <h4>5,000</h4>
-        <p>Reams of paper recycled</p>
-      </div>
+    <!--     <h4>5,000</h4> -->
+<!--         <p>Cutting down on paper consumption</p>
+ -->      </div>
       <div class="col-xs-12 col-sm-2">
         <%= image_tag "icons-05.png" %>
-        <h4>4,300</h4>
-        <p>Plastic bottles recycled</p>
-      </div>
+<!--         <h4>4,300</h4> -->
+<!--         <p>Reducing plastic waste</p>
+ -->      </div>
       <div class="col-xs-12 col-sm-2">
         <%= image_tag "ecopledge-logo-01.png" %>
-        <h4>152</h4>
-        <p>Carbon footprint reduction from the EcoPledge</p>
-      </div>
+   <!--      <h4>152</h4> -->
+<!--         <p>Collectively reducing our carbon footprint</p>
+ -->      </div>
       <div class="col-xs-12 col-sm-2">
         <%= image_tag "icons-07.png" %>
-        <h4>250</h4>
-        <p>Kilowatts of electricity saved</p>
-      </div>
+<!--         <h4>250</h4> -->
+<!--         <p>Lessening our electricity use</p>
+ -->      </div>
       <div class="col-xs-12 col-sm-2">
         <%= image_tag "icons-08.png" %>
-        <h4>100,000</h4>
-        <p>Gallons of water saved</p>
-      </div>
+       <!--  <h4>100,000</h4> -->
+<!--         <p>Minimising water use</p>
+ -->      </div>
     </div>
   </div>
   <div class="ecopledge-cta">
