--- a/app/views/pages/wwd.html.erb
+++ b/app/views/pages/wwd.html.erb
@@ -29,7 +29,7 @@
               <span><h3>HeroesToo EcoPledge</h3></span>
             </div>
             <div class="card-two-description" style="top: 255px;" >
-              <span><p>Our unique and successful, tool to restore and preserve our environment through encouraging each and every individual to be aware of their habits and reduce their resource consumption.</p></span>
+              <span><p>Our unique and successful tool to restore and preserve our environment through encouraging each and every individual to be aware of their habits and reduce their resource consumption.</p></span>
             </div>
             <div class="card-two-readmore">
               <span id="ht-ecopledge-program"><a href="#program-info">READ MORE</a></span>
