--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
       <p><a><%= link_to "HeroesToo", about_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <p><a><%= link_to "FAQ", about_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <p><a><%= link_to "Team", about_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
-      <p><a><%= link_to "Past Programs", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
+      <p><a><%= link_to "Past Programmes", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
     </div>
     <div class="abt-links">
       <h5 style='padding: 0 20px !important;'>Get Involved</h5>
