--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,6 +32,12 @@ body {
   }
 }
 
+@media screen and (max-width: 1000px) {
+.ecopledge-content {
+  display: none;
+  }
+}
+
 .ecopledge-cta {
   padding-bottom: 60px
 }
