--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="abt-links">
       <h5 style='padding: 0 20px !important;'>Get Involved</h5>
-      <p><%= link_to "Take the EcoPledge", ecopledge_path, class: "navbar-wagon-item navbar-wagon-link" %></p>
+      <p><%= link_to "EcoPledge", ecopledge_path, class: "navbar-wagon-item navbar-wagon-link" %></p>
       <p><a><%= link_to "Our Programmes", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <p><a><%= link_to "Volunteer", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <p><a><%= link_to "Sponsor Us", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
