--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -90,5 +90,13 @@
     </div>
   </div>
 </div>
+<div class="ecopledge-explanation">
+  <div class="ecopledge-text">
+    <h2>Upcoming Events</h2>
+  </div>
+  <div class="news-events">
+  <%= image_tag "DO_Day_ESHT Poster-1.jpg" %>
+  </div>
+</div>
 
 
